GNOME Bugzilla – Bug 797036
audiobuffersplit: Fix format string warning
Last modified: 2018-08-28 08:14:28 UTC
Created attachment 373473 [details] [review] Fix format string patch See patch file
commit 962ca015966967816b97befaf7518b63e6e9edc2 (HEAD -> master) Author: Johan Bjäreholt <johanbj@axis.com> Date: Tue Aug 28 09:11:32 2018 +0200 audiobuffersplit: Fix format string warning We have a GST_DEBUG_OBJECT, which prints a guint64 with %lu which gave a compiler warning. Used G_GUINT64_FORMAT instead. https://bugzilla.gnome.org/show_bug.cgi?id=797036